# pet-hotel-django

./: README.md  pyproject.toml
source/: db.sqlite3
source/about/: admin.py  models.py  urls.py  views.py
source/about/migrations/: 0001_initial.py  0002_alter_aboutpage_hero_subheading_and_more.py  0003_alter_aboutpage_hero_image_and_more.py  0004_alter_aboutpage_hero_subheading_and_more.py  0005_alter_aboutpage_hero_title.py  0006_alter_aboutpage_options.py  0007_alter_aboutpage_options.py
source/about/templates/: about.html
source/booking/: admin.py  models.py  urls.py  views.py
source/booking/migrations/: 0001_initial.py  0002_rename_check_in_booking_check_in_date_and_more.py  0003_pettype_remove_booking_room_booking_email_and_more.py  0004_roomprices_remove_bookingtotalprice_booking_and_more.py  0005_alter_roomprices_pet_size_alter_roomprices_pet_type.py  0006_alter_roomprices_pet_size.py  0007_alter_roomprices_pet_type.py  0015_discount.py  (+8 more)
source/branding/: admin.py  models.py
source/contact/: admin.py  models.py  urls.py  views.py
source/core/: .env  settings.py  urls.py  wsgi.py
source/errors/: admin.py  models.py  views.py
source/grooming/: admin.py  models.py  urls.py  views.py
source/home/: admin.py  models.py  urls.py  views.py
source/hotel/: admin.py  models.py  urls.py  views.py
source/meals/: admin.py  models.py  urls.py  views.py
source/training/: admin.py  models.py  urls.py  views.py
source/transportation/: admin.py  models.py  urls.py  views.py
source/water_sports/: admin.py  apps.py  models.py  urls.py  views.py
(+82 files in other folders)
